complete myspace module

--- a/lypchat/src/main/res/layout/main_activity.xml
+++ b/lypchat/src/main/res/layout/main_activity.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     android:id="@+id/mainLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
+   <include layout="@layout/toolbar_base_layout"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:id="@+id/main_bottom"
         android:layout_width="match_parent"
@@ -119,6 +124,7 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/main_bottom" />
-
-</RelativeLayout>
+        android:layout_above="@id/main_bottom"
+        />
+    </RelativeLayout>
+</LinearLayout>
