--- a/lypchat/src/main/res/layout/profile_fragment.xml
+++ b/lypchat/src/main/res/layout/profile_fragment.xml
@@ -4,9 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-    <include layout="@layout/common_header_layout" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -37,13 +34,14 @@
                         android:id="@+id/profile_avatar_view"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:src="@drawable/chat_default_user_avatar" />
+                        android:src="@drawable/avatar_default" />
 
                     <TextView
                         android:id="@+id/profile_username_view"
                         android:layout_marginLeft="30dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:text="username"
                         android:drawableRight="@drawable/common_view_right_arrow_pic"/>
                 </LinearLayout>
@@ -59,6 +57,7 @@
                     android:background="@drawable/btn_selector"
                     android:paddingLeft="@dimen/common_horizontal_margin"
                     android:paddingRight="@dimen/common_horizontal_margin"
+                    android:textColor="@color/black"
                     android:drawableRight="@drawable/common_view_right_arrow_pic"/>
 
                 <View style="@style/DividerLine.Horizontal"/>
@@ -72,6 +71,7 @@
                     android:background="@drawable/btn_selector"
                     android:paddingLeft="@dimen/common_horizontal_margin"
                     android:paddingRight="@dimen/common_horizontal_margin"
+                    android:textColor="@color/black"
                     android:drawableRight="@drawable/common_view_right_arrow_pic"/>
 
                 <View style="@style/DividerLine.Horizontal"/>
@@ -86,6 +86,7 @@
                 android:layout_marginLeft="@dimen/common_horizontal_margin"
                 android:layout_marginRight="@dimen/common_horizontal_margin"
                 android:gravity="center"
+                android:textColor="@color/black"
                 android:text="注销" />
         </LinearLayout>
     </ScrollView>
