--- a/lypchat/src/main/res/layout/profile_setting_notify_layout.xml
+++ b/lypchat/src/main/res/layout/profile_setting_notify_layout.xml
@@ -3,13 +3,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    android:background="@color/chat_msg_emote_divider"
+    >
+     <include layout="@layout/toolbar_base_layout"/>
     <fragment
         android:id="@+id/fragment"
         android:name="com.avoscloud.chat.fragment.ProfileNotifySettingFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
 
 </LinearLayout>
 
