--- a/lypchat/src/main/res/values/colors.xml
+++ b/lypchat/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="base_color_text_gray">#9fa0a0</color>
     <color name="contact_base_actionbar_bg">#f5f5f5</color>
     <color name="contact_base_bg">#f4f6f6</color>
+    <color name="black">#000</color>
 </resources>
