--- a/lypchat/src/main/res/values/dimens.xml
+++ b/lypchat/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="group_detail_text_height">80dp</dimen>
     <dimen name="tip_icon_size">10dp</dimen>
     <dimen name="myspace_margin_left">10dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
 </resources>
