--- a/lypchat/src/main/res/values/styles.xml
+++ b/lypchat/src/main/res/values/styles.xml
@@ -150,4 +150,23 @@
         <item name="android:background">@color/chat_common_blue</item>
         <item name="android:titleTextStyle">@style/ActionBarTitleStyle</item>
     </style>
+
+    <style name="AppTheme" parent="AppTheme.Base">
+    </style>
+    <style name="AppTheme.Base" parent="Theme.AppCompat">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <!--Status bar color-->
+        <item name="colorPrimaryDark">@color/accent_material_light</item>
+        <!--Window color-->
+        <item name="android:windowBackground">@color/dim_foreground_material_dark</item>
+        <item name="colorPrimary">@color/accent_material_light</item>
+     </style>
+
+     <style name="DialogTheme" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowNoTitle">true</item>
+         <item name="android:windowBackground">@color/theme_bg_color</item>
+         <item name="android:windowIsFloating">true</item>
+         <item name="android:backgroundDimEnabled">false</item>
+     </style>
 </resources>
