--- a/lypchat/src/main/res/layout/main_activity.xml
+++ b/lypchat/src/main/res/layout/main_activity.xml
@@ -125,6 +125,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/main_bottom"
+        android:background="@color/white"
         />
     </RelativeLayout>
 </LinearLayout>
