--- a/lypchat/src/main/res/layout/profile_setting_notify_layout.xml
+++ b/lypchat/src/main/res/layout/profile_setting_notify_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/chat_msg_emote_divider"
+    android:background="@color/white"
     >
      <include layout="@layout/toolbar_base_layout"/>
     <fragment
