--- a/lypchat/src/main/res/layout/contact_person_info_activity.xml
+++ b/lypchat/src/main/res/layout/contact_person_info_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/theme_bg_color"
     android:orientation="vertical">
-
+    <include layout="@layout/tool_bar"/>
     <RelativeLayout
         android:id="@+id/head_layout"
         android:layout_width="match_parent"
