--- a/lypchat/src/main/res/layout/contact_fragment.xml
+++ b/lypchat/src/main/res/layout/contact_fragment.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+     <include layout="@layout/contact_fragment_header_layout"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
