--- a/lypchat/src/main/res/layout/contact_fragment_header_layout.xml
+++ b/lypchat/src/main/res/layout/contact_fragment_header_layout.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center_vertical"
-    android:orientation="horizontal"
-    android:padding="3dp">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:id="@+id/header_layout"
+   >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
 
     <LinearLayout
         android:id="@+id/layout_new"
@@ -100,5 +104,5 @@
         android:layout_height="@dimen/base_line_width_1"
         android:layout_below="@id/layout_group"
         android:background="@drawable/base_horizontal_line"></View>
-
-</RelativeLayout>
+    </RelativeLayout>
+</LinearLayout>
