--- a/lypchat/src/main/res/layout/contact_new_friend_activity.xml
+++ b/lypchat/src/main/res/layout/contact_new_friend_activity.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/contact_base_bg"
     android:orientation="vertical">
-
+    <include layout="@layout/tool_bar"/>
     <com.avoscloud.leanchatlib.view.RefreshableRecyclerView
         android:id="@+id/newfriendList"
         android:layout_width="match_parent"
