--- a/lypchat/src/main/res/layout/group_list_activity.xml
+++ b/lypchat/src/main/res/layout/group_list_activity.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:orientation="vertical"
 
+    >
+     <include layout="@layout/tool_bar"/>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/activity_group_list_srl_pullrefresh"
         android:layout_width="match_parent"
